--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="78pTD9TDLA7ZMSqjer_kDuhzlE1UCXA-0eLDsem2vsQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chatbot</title>
   <!-- Include Bootstrap CSS -->
